--- a/BossanovaJam/BossanovaJamVersion2/Web.config
+++ b/BossanovaJam/BossanovaJamVersion2/Web.config
@@ -14,7 +14,14 @@
     <add name="at1614_b3ConnectionString" connectionString="server=mysql.lrk.si;user id=at1614;database=at1614_b3;password=sp;persistsecurityinfo=True"
       providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory,MySql.Data" />
+    </DbProviderFactories>
+  </system.data>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <pages>
