--- a/BossanovaJam/BossanovaJamVersion2/Web.config
+++ b/BossanovaJam/BossanovaJamVersion2/Web.config
@@ -7,6 +7,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="BossanovaJamVersion2.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-BossanovaJamVersion2-20150113193717;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-BossanovaJamVersion2-20150113193717.mdf"
@@ -63,4 +66,17 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <system.serviceModel>
+    
+    <bindings />
+    <client />
+  </system.serviceModel>
+  <applicationSettings>
+    <BossanovaJamVersion2.Properties.Settings>
+      <setting name="BossanovaJamVersion2_net_webservicex_www_CurrencyConvertor"
+        serializeAs="String">
+        <value>http://www.webservicex.net/CurrencyConvertor.asmx</value>
+      </setting>
+    </BossanovaJamVersion2.Properties.Settings>
+  </applicationSettings>
 </configuration>
